--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 # Firebase
 ltksite-4d7be-firebase-adminsdk-fbsvc-0e36462393.json
-.firebaserc
-firebase.json
+# .firebaserc
+# firebase.json
 firestore.indexes.json
 firestore.rules
 functions/node_modules
 functions/package-lock.json
+firebase-debug.log*
 
 # IDE
 .idea/
